--- a/css_layout/main.css
+++ b/css_layout/main.css
@@ -2,6 +2,12 @@ body{
     margin: auto 0;
 }
 
+.sticky{
+    position: fixed;
+    top:0;
+    width:100%;
+}
+
 /* nav */
 .main-nav{
     display:flex;
