--- a/vanila-js/movie-seat-booking/style.css
+++ b/vanila-js/movie-seat-booking/style.css
@@ -112,3 +112,20 @@ p.text {
 p.text span {
     color: #6feaf6;
 }
+
+.clear-button {
+    font-size: 16px;
+    padding: 1rem 1.5rem;
+    margin: 2rem 0;
+    background-color:#3f3c5d;
+    color:#fff;
+    border: none;
+    border-radius: 0.5px;
+    text-transform: uppercase;
+    text-decoration:none;
+    transition: all 0.2s;
+}
+.clear-button:hover {
+    background-color: #fff;
+    color:#242333;
+}
