--- a/gatsby-starter-hello-world/src/components/layout.css
+++ b/gatsby-starter-hello-world/src/components/layout.css
@@ -10,7 +10,7 @@ body{
 }
 
 h1 {
-    color:blue;
+    color:#5e5e5c;
     text-transform:capitalize;
 }
 
@@ -39,4 +39,28 @@ a {
 footer {
     background:#f3f3f3;
     
+}
+
+.images {
+    text-align: center;
+    text-transform: capitalize;
+    width: 80%;
+    margin: 0 auto 10rem auto;
+}
+
+.single-image {
+    border:3px solid #ff1010;
+    padding: 1rem 0;
+}
+
+@media(min-width:992px) {
+    .images {
+        display: grid;
+        grid-template-columns:repeat(3, 1fr);
+        column-gap: 1rem;
+    }
+}
+
+.small {
+    width: 100px;
 }
