--- a/gatsby-starter-hello-world/src/components/layout.css
+++ b/gatsby-starter-hello-world/src/components/layout.css
@@ -7,6 +7,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    padding-bottom: 70px;
 }
 
 h1 {
@@ -38,7 +39,12 @@ a {
 
 footer {
     background:#f3f3f3;
-    
+    text-align:center;
+    padding: 10px;
+    width: 100%;
+    z-index:1;
+    position:fixed;
+    bottom:0;
 }
 
 .images {
