--- a/angular/hello-world/src/app/courses/courses.component.html
+++ b/angular/hello-world/src/app/courses/courses.component.html
@@ -1,4 +1,4 @@
-<ul>
+<!-- <ul>
     <li *ngFor="let course of courses">
         {{ course }}
     </li>
@@ -14,5 +14,7 @@
 {{ course.price | currency}} <br>
 {{ course.releaseDate | date:'shortDate'}} <br>
 
-{{ text | summary: 30 }}
+{{ text | summary: 30 }} -->
 
+<input type="text" [(ngModel)] = "title" > <br>
+{{ title | titlize }}
