--- a/angular/hello-world/src/app/favourites/favourites.component.html
+++ b/angular/hello-world/src/app/favourites/favourites.component.html
@@ -2,8 +2,8 @@
 <span 
     style="font-size: 50px"
     class="glyphicon glyphicon-plus" 
-    [class.glyphicon-star] = "isFavourited"
-    [class.glyphicon-star-empty] = "!isFavourited"
+    [class.glyphicon-star] = "isFavorite"
+    [class.glyphicon-star-empty] = "!isFavorite"
     (click)="onClick()"
     >
 </span>
