--- a/angular/hello-world/src/app/app.component.html
+++ b/angular/hello-world/src/app/app.component.html
@@ -1,1 +1,13 @@
-<courses></courses>
+<!-- <courses></courses>
+<favourites [isFavorite] = "post.isFavorite" (change)="onFavoriteChanged($event)"></favourites> -->
+<!-- <bootstrap-panel>
+    <div class="heading">Heading</div>
+    <div class="body">
+        <h2>Body</h2>
+        <p>Some content here...</p>
+    </div>
+</bootstrap-panel> -->
+<like 
+    [likeCount] = "tweet.likeCount" 
+    [isActive] = "tweet.isLiked"
+></like>
