--- a/firegram-starter-files/src/index.css
+++ b/firegram-starter-files/src/index.css
@@ -71,5 +71,27 @@ label:hover {
   margin-top: 20px;
 }
 /* image grid styles */
+.img-grid {
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
+}
 
+.img-wrap {
+  overflow: hidden;
+  height: 0;
+  padding: 50% 0;
+  position: relative;
+  opacity: 0.8;
+}
+
+.img-wrap img {
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 130%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 /* modal styles */
